tests/semantics/invalid/var_redeclared.s23
int a = 3;
float a = 3.0;